feat: add a wallet restore endpoint with mnemonic
