# internal/api/api.go
@@ -16,6 +16,7 @@ package api
 
 import (
 	"fmt"
+	"net/http"
 	"time"
 
 	ginzap "github.com/gin-contrib/zap"
@@ -30,6 +31,11 @@ import (
 
 	_ "github.com/blinklabs-io/bursa/docs" // docs is generated by Swag CLI
 )
+
+// WalletRestoreRequest defines the request payload for wallet restoration
+type WalletRestoreRequest struct {
+	Mnemonic string `json:"mnemonic" binding:"required"`
+}
 
 //	@title			bursa
 //	@version		v0
@@ -91,9 +97,16 @@ func Start(cfg *config.Config) error {
 		Description: "total number of wallet failures",
 		Labels:      nil,
 	}
+	restoreMetric := &ginmetrics.Metric{
+		Type:        ginmetrics.Counter,
+		Name:        "bursa_wallets_restore_count",
+		Description: "total number of wallets restored",
+		Labels:      nil,
+	}
 	// Add to global monitor object
 	_ = ginmetrics.GetMonitor().AddMetric(createdMetric)
 	_ = ginmetrics.GetMonitor().AddMetric(failureMetric)
+	_ = ginmetrics.GetMonitor().AddMetric(restoreMetric)
 
 	// Start metrics listener
 	go func() {
@@ -110,6 +123,7 @@ func Start(cfg *config.Config) error {
 
 	// Configure API routes
 	router.GET("/api/wallet/create", handleWalletCreate)
+	router.POST("/api/wallet/restore", handleWalletRestore)
 
 	// Start API listener
 	err := router.Run(fmt.Sprintf("%s:%d",
@@ -154,4 +168,40 @@ func handleWalletCreate(c *gin.Context) {
 	}
 	c.JSON(200, w)
 	_ = ginmetrics.GetMonitor().GetMetric("bursa_wallets_create_count").Inc(nil)
+}
+
+// handleWalletRestore handles the wallet restoration request.
+//
+//	@Summary		Restore a wallet using a mnemonic seed phrase
+//	@Description	Restores a wallet using the provided mnemonic seed phrase and returns wallet details.
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		WalletRestoreRequest	true	"Wallet Restore Request"
+//	@Success		200		{object}	bursa.Wallet			"Wallet successfully restored"
+//	@Failure		400		{string}	string					"Invalid request"
+//	@Failure		500		{string}	string					"Internal server error"
+//	@Router			/api/wallet/restore [post]
+func handleWalletRestore(c *gin.Context) {
+	var request WalletRestoreRequest
+	if err := c.BindJSON(&request); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
+		_ = ginmetrics.GetMonitor().
+			GetMetric("bursa_wallets_fail_count").
+			Inc(nil)
+		return
+	}
+
+	// Restore the wallet using the mnemonic
+	wallet, err := bursa.NewDefaultWallet(request.Mnemonic)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal server error"})
+		_ = ginmetrics.GetMonitor().
+			GetMetric("bursa_wallets_fail_count").
+			Inc(nil)
+		return
+	}
+
+	// Return the wallet details
+	c.JSON(http.StatusOK, wallet)
+	_ = ginmetrics.GetMonitor().GetMetric("bursa_wallets_restore_count").Inc(nil)
 }
